# devstone

./: .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  cadmium-devstone  cdboost-devstone  cdboost-devstone-atomic.hpp  events.txt  run_devstones.sh  setup.sh
Testing/Temporary/: CTestCostData.txt
dhry/: Makefile  dhry.h  dhry_1.c  dhry_2.c
examples/: cadmium-dynamic-LI33.cpp
generated_20200627/: LI_DEVSTONE_D10_W10  LI_DEVSTONE_D10_W10.cpp  LI_DEVSTONE_D10_W2  LI_DEVSTONE_D10_W2.cpp  LI_DEVSTONE_D10_W3  LI_DEVSTONE_D10_W3.cpp  LI_DEVSTONE_D10_W4  LI_DEVSTONE_D10_W4.cpp  LI_DEVSTONE_D10_W5  LI_DEVSTONE_D10_W5.cpp  LI_DEVSTONE_D10_W6  LI_DEVSTONE_D10_W6.cpp  LI_DEVSTONE_D10_W7  LI_DEVSTONE_D10_W7.cpp  LI_DEVSTONE_D10_W8  LI_DEVSTONE_D10_W8.cpp  LI_DEVSTONE_D10_W9  LI_DEVSTONE_D10_W9.cpp  LI_DEVSTONE_D2_W10  LI_DEVSTONE_D2_W10.cpp  LI_DEVSTONE_D2_W2  LI_DEVSTONE_D2_W2.cpp  LI_DEVSTONE_D2_W3  LI_DEVSTONE_D2_W3.cpp  LI_DEVSTONE_D2_W4  LI_DEVSTONE_D2_W4.cpp  LI_DEVSTONE_D2_W5  LI_DEVSTONE_D2_W5.cpp  LI_DEVSTONE_D2_W6  LI_DEVSTONE_D2_W6.cpp  LI_DEVSTONE_D2_W7  LI_DEVSTONE_D2_W7.cpp  LI_DEVSTONE_D2_W8  LI_DEVSTONE_D2_W8.cpp  LI_DEVSTONE_D2_W9  LI_DEVSTONE_D2_W9.cpp  LI_DEVSTONE_D3_W10  LI_DEVSTONE_D3_W10.cpp  LI_DEVSTONE_D3_W2  LI_DEVSTONE_D3_W2.cpp  (+123 more)
src/: LI_3_3.cpp  cadmium-devstone-atomic.hpp  cadmium-devstone.cpp  cadmium-dynamic-LI.cpp  cadmium-dynamic-devstone.cpp  cadmium-event-reader.hpp  cadmium-ref-HI.cpp  cadmium-ref-LI.cpp  cdboost-devstone-atomic.hpp  cdboost-devstone.cpp  helpers.hpp
src/dynamic/: HI_generator.cpp  HO_generator.cpp  HOmod_generator.cpp  LI_generator.cpp
test/: cadmium_dynamic_LI_test.cpp  check_generated_LI_against_ref.sh  test_helpers.cpp  test_helpers.hpp
